--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
             <h2 id="occup" class="has-dark content py-4">a programmer</h2>
             <!-- </div> -->
             <div id="summary" class="container row pb-3 pt-3">
-                <h2 id="summary-title" class="pb-2 pt-1">Summary</h2>
+                <h2 id="summary-title" class="has-dark pb-2 pt-1">Summary</h2>
                 <p class="content has-dark" id="summary-content">
                     I'm a 4th-year university student major in <span class="bold-text">Data Science</span> who has a
                     well-rounded experience in <span class="bold-text">
@@ -25,7 +25,7 @@ import Layout from '../layouts/Layout.astro';
     </section>
     <section id="edu">
         <div class="container py-5">
-            <h2 id="edu-h2">Education</h2>
+            <h2 id="edu-h2" class="has-dark">Education</h2>
             <div class="container">
                 <div class="row">
                     <img src="/assets/images/武汉纺织大学-logo.svg" alt="university logo" id="wtu-img"
@@ -39,7 +39,7 @@ import Layout from '../layouts/Layout.astro';
                 </div>
             </div>
             <hr>
-            <h2 id="project-exp-h2">Project Experience</h2>
+            <h2 id="project-exp-h2" class="has-dark">Project Experience</h2>
             <div id="project-list" class="container py-3">
                 <div class="row g-4">
                     <div class="col-lg-6">
@@ -68,26 +68,26 @@ import Layout from '../layouts/Layout.astro';
     </section>
     <section id="skills">
         <div class="container py-5">
-            <h2 id="skills-h2" class="mb-3">Skills</h2>
+            <h2 id="skills-h2" class="has-dark">Skills</h2>
             <ul id="skills-list" class="skill-list">
             </ul>
             <hr>
-            <h2 id="awards-h2" class="mb-3">Pub, Awards and Certifications</h2>
+            <h2 id="awards-h2" class="has-dark">Pub, Awards and Certifications</h2>
             <ul id="awards-list" class="award-list">
             </ul>
         </div>
     </section>
     <section id="other" class="pt-5 pb-3">
         <div class="container pt-3">
-            <h2 id="about-me-h2">About Me</h2>
-            <h2 id="hobbies-h2">My Hobbies</h2>
+            <h2 id="about-me-h2" class="has-dark">About Me</h2>
+            <h2 id="hobbies-h2" class="has-dark">My Hobbies</h2>
             <div class="container row gap-3 my-5 d-flex justify-content-center" id="my-hobbies">
             </div>
             <hr>
             <div class="container d-flex flex-column justify-content-center align-items-center gap-4 py-5">
                 <h3 id="hello">Nice to Meet You</h3>
                 <img src="/assets/images/1x1正装.jpg" alt="my photo" id="my-photo">
-                <a href="/Contact.html" class="btn btn-primary">
+                <a href="/contact" class="btn btn-primary">
                     <p id="contact">Contact Me</p>
                 </a>
             </div>
