Added proj3, 4. TODO: Add translation for them

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,12 +28,12 @@ import Layout from '../layouts/Layout.astro';
             <h2 id="edu-h2" class="has-dark">Education</h2>
             <div class="container">
                 <div class="row">
-                    <img src="/assets/images/武汉纺织大学-logo.svg" alt="university logo" id="wtu-img"
+                    <img src="/assets/images/wtu-logo.svg" alt="university logo" id="wtu-img"
                         class="col-2 col-lg-1 img-fluid pt-2">
 
                     <p id="edu-p" class="has-dark content pt-3 px-2 col-12 col-md-6 col-lg-6">Senior at Wuhan Textile
                         University
-                        <span>Academic Average: 89.6/100 (Top 5% in major)</span>
+                        <span>Academic Average: 89.5/100 (Top 5% in major)</span>
                     </p>
                     <p class="has-dark content pt-3 col-12 col-md-3 col-lg-4" id="edu-year">2022-2026</p>
                 </div>
@@ -62,6 +62,36 @@ import Layout from '../layouts/Layout.astro';
                             <img class="proj-img" src="/assets/images/proj2.png" alt="project 2">
                         </div>
                     </div>
+                    <div class="col-lg-6">
+                        <p id="project3-title" class="project-title">
+                            YOLOv8-based Object Detection System Development
+                        </p>
+                        <ul id="project3-desc">
+                            <li>Collected and annotated a custom dataset by labelImg, and configured the YOLOv8 environment.</li>
+                            <li>Trained and tested the YOLOv8 model, applying data augmentation to improve robustness.</li>
+                            <li>Optimized performance through hyperparameter tuning and classifier fusion to enhance accuracy.</li>
+                        </ul>
+                        <div class="imgModal">
+                            <img class="proj-img" src="/assets/images/proj3-1.png" alt="project 3">
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <p id="project4-title" class="project-title">
+                            Unity Game Development
+                        </p>
+                        <ul id="project4-desc">
+                            <li>Mastered Unity engine fundamentals and C# syntax for game development.</li>
+                            <li>Developed 2D & 3D games, covering scene construction, physics simulation, and UI design.</li>
+                            <li>Applied skills to Create demo games to showcase abilities, available at: 
+                            <a href="https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump">Demo1</a>
+                            and
+                            <a href="https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway">Demo2</a>.
+                            </li>
+                        </ul>
+                        <div class="imgModal">
+                            <img class="proj-img" src="/assets/images/proj4.png" alt="project 4">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -86,7 +116,7 @@ import Layout from '../layouts/Layout.astro';
             <hr>
             <div class="container d-flex flex-column justify-content-center align-items-center gap-4 py-5">
                 <h3 id="hello">Nice to Meet You</h3>
-                <img src="/assets/images/1x1正装.jpg" alt="my photo" id="my-photo">
+                <img src="/assets/images/ID_Photo.jpg" alt="my photo" id="my-photo">
                 <a href="/contact" class="btn btn-primary">
                     <p id="contact">Contact Me</p>
                 </a>
