Added translation for newly added projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,69 +25,46 @@ import Layout from '../layouts/Layout.astro';
     </section>
     <section id="edu">
         <div class="container py-5">
-            <h2 id="edu-h2" class="has-dark">Education</h2>
+            <h2 id="edu-h2" class="has-dark"></h2>
             <div class="container">
                 <div class="row">
                     <img src="/assets/images/wtu-logo.svg" alt="university logo" id="wtu-img"
                         class="col-2 col-lg-1 img-fluid pt-2">
 
-                    <p id="edu-p" class="has-dark content pt-3 px-2 col-12 col-md-6 col-lg-6">Senior at Wuhan Textile
-                        University
-                        <span>Academic Average: 89.5/100 (Top 5% in major)</span>
-                    </p>
-                    <p class="has-dark content pt-3 col-12 col-md-3 col-lg-4" id="edu-year">2022-2026</p>
+                    <p id="edu-p" class="has-dark content pt-3 px-2 col-12 col-md-6 col-lg-6"></p>
+                    <p class="has-dark content pt-3 col-12 col-md-3 col-lg-4" id="edu-year"></p>
                 </div>
             </div>
             <hr>
-            <h2 id="project-exp-h2" class="has-dark">Project Experience</h2>
+            <h2 id="project-exp-h2" class="has-dark"></h2>
             <div id="project-list" class="container py-3">
                 <div class="row g-4">
                     <div class="col-lg-6">
-                        <p id="project1-title" class="project-title">
-                            Medical Image Segmentation Network Development
-                        </p>
-                        <p id="project1-date">June 2023 - July 2024</p>
-                        <ul id="project1-desc">
-                        </ul>
+                        <p id="project1-title" class="project-title"></p>
+                        <p id="project1-date"></p>
+                        <ul id="project1-desc"></ul>
                         <div class="imgModal">
                             <img class="proj-img" src="/assets/images/proj1.png" alt="project 1">
                         </div>
                     </div>
                     <div class="col-lg-5">
-                        <p id="project2-title" class="project-title">Multi-Omics Cell Mapping and Visualization</p>
-                        <p id="project2-date">July 2024 - April 2025</p>
-                        <ul id="project2-desc">
-                        </ul>
+                        <p id="project2-title" class="project-title"></p>
+                        <p id="project2-date"></p>
+                        <ul id="project2-desc"></ul>
                         <div class="imgModal">
                             <img class="proj-img" src="/assets/images/proj2.png" alt="project 2">
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p id="project3-title" class="project-title">
-                            YOLOv8-based Object Detection System Development
-                        </p>
-                        <ul id="project3-desc">
-                            <li>Collected and annotated a custom dataset by labelImg, and configured the YOLOv8 environment.</li>
-                            <li>Trained and tested the YOLOv8 model, applying data augmentation to improve robustness.</li>
-                            <li>Optimized performance through hyperparameter tuning and classifier fusion to enhance accuracy.</li>
-                        </ul>
+                        <p id="project3-title" class="project-title"></p>
+                        <ul id="project3-desc"></ul>
                         <div class="imgModal">
                             <img class="proj-img" src="/assets/images/proj3-1.png" alt="project 3">
                         </div>
                     </div>
                     <div class="col-lg-5">
-                        <p id="project4-title" class="project-title">
-                            Unity Game Development
-                        </p>
-                        <ul id="project4-desc">
-                            <li>Mastered Unity engine fundamentals and C# syntax for game development.</li>
-                            <li>Developed 2D & 3D games, covering scene construction, physics simulation, and UI design.</li>
-                            <li>Applied skills to Create demo games to showcase abilities, available at: 
-                            <a href="https://play.unity.com/en/games/4bdf643c-5ecf-404d-8e36-7bbc021cc40d/penguin-jump">Demo1</a>
-                            and
-                            <a href="https://play.unity.com/en/games/d7827b9c-5e95-4e3e-adb4-2c2a01e081df/essential-pathway">Demo2</a>.
-                            </li>
-                        </ul>
+                        <p id="project4-title" class="project-title"></p>
+                        <ul id="project4-desc"></ul>
                         <div class="imgModal">
                             <img class="proj-img" src="/assets/images/proj4.png" alt="project 4">
                         </div>
@@ -98,11 +75,11 @@ import Layout from '../layouts/Layout.astro';
     </section>
     <section id="skills">
         <div class="container py-5">
-            <h2 id="skills-h2" class="has-dark">Skills</h2>
+            <h2 id="skills-h2" class="has-dark"></h2>
             <ul id="skills-list" class="skill-list">
             </ul>
             <hr>
-            <h2 id="awards-h2" class="has-dark">Pub, Awards and Certifications</h2>
+            <h2 id="awards-h2" class="has-dark"></h2>
             <ul id="awards-list" class="award-list">
             </ul>
         </div>
