Added and modified all 8 projects with images.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import Layout from '../layouts/Layout.astro';
                             <img class="proj-img" src="/assets/images/proj1.png" alt="project 1">
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-6">
                         <p id="project2-title" class="project-title"></p>
                         <p id="project2-date"></p>
                         <ul id="project2-desc"></ul>
@@ -62,11 +62,39 @@ import Layout from '../layouts/Layout.astro';
                             <img class="proj-img" src="/assets/images/proj3-1.png" alt="project 3">
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-6">
                         <p id="project4-title" class="project-title"></p>
                         <ul id="project4-desc"></ul>
                         <div class="imgModal">
                             <img class="proj-img" src="/assets/images/proj4.png" alt="project 4">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <p id="project5-title" class="project-title"></p>
+                        <ul id="project5-desc"></ul>
+                        <div class="imgModal">
+                            <img class="proj-img" src="/assets/images/proj5.png" alt="project 5">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <p id="project6-title" class="project-title"></p>
+                        <ul id="project6-desc"></ul>
+                        <div class="imgModal">
+                            <img class="proj-img" src="/assets/images/proj6.png" alt="project 6">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <p id="project7-title" class="project-title"></p>
+                        <ul id="project7-desc"></ul>
+                        <div class="imgModal">
+                            <img class="proj-img" src="/assets/images/proj7.png" alt="project 7">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <p id="project8-title" class="project-title"></p>
+                        <ul id="project8-desc"></ul>
+                        <div class="imgModal">
+                            <img class="proj-img" src="/assets/images/proj8.png" alt="project 8">
                         </div>
                     </div>
                 </div>
