Transfered images into GitHub

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,8 @@ import Layout from '../layouts/Layout.astro';
                         <p id="project1-date"></p>
                         <ul id="project1-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj1.png" alt="project 1">
+                            <!-- <img class="proj-img" src="/assets/images/proj1.png" alt="project 1"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202111604.png" alt="project 1">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -52,49 +53,56 @@ import Layout from '../layouts/Layout.astro';
                         <p id="project2-date"></p>
                         <ul id="project2-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj2.png" alt="project 2">
+                            <!-- <img class="proj-img" src="/assets/images/proj2.png" alt="project 2"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202112474.png" alt="project 2">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <p id="project3-title" class="project-title"></p>
                         <ul id="project3-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj3-1.png" alt="project 3">
+                            <!-- <img class="proj-img" src="/assets/images/proj3-1.png" alt="project 3"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202112595.png" alt="project 3">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <p id="project4-title" class="project-title"></p>
                         <ul id="project4-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj4.png" alt="project 4">
+                            <!-- <img class="proj-img" src="/assets/images/proj4.png" alt="project 4"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202113101.png" alt="project 4">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <p id="project5-title" class="project-title"></p>
                         <ul id="project5-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj5.png" alt="project 5">
+                            <!-- <img class="proj-img" src="/assets/images/proj5.png" alt="project 5"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202113145.png" alt="project 5">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <p id="project6-title" class="project-title"></p>
                         <ul id="project6-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj6.png" alt="project 6">
+                            <!-- <img class="proj-img" src="/assets/images/proj6.png" alt="project 6"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202113637.png" alt="project 6">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <p id="project7-title" class="project-title"></p>
                         <ul id="project7-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj7.png" alt="project 7">
+                            <!-- <img class="proj-img" src="/assets/images/proj7.png" alt="project 7"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202113061.png" alt="project 7">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <p id="project8-title" class="project-title"></p>
                         <ul id="project8-desc"></ul>
                         <div class="imgModal">
-                            <img class="proj-img" src="/assets/images/proj8.png" alt="project 8">
+                            <!-- <img class="proj-img" src="/assets/images/proj8.png" alt="project 8"> -->
+                            <img class="proj-img" src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202114206.png" alt="project 8">
                         </div>
                     </div>
                 </div>
@@ -121,7 +129,8 @@ import Layout from '../layouts/Layout.astro';
             <hr>
             <div class="container d-flex flex-column justify-content-center align-items-center gap-4 py-5">
                 <h3 id="hello">Nice to Meet You</h3>
-                <img src="/assets/images/ID_Photo.jpg" alt="my photo" id="my-photo">
+                <!-- <img src="/assets/images/ID_Photo.jpg" alt="my photo" id="my-photo"> -->
+                <img src="https://cdn.jsdelivr.net/gh/darkwilldie/ImageShack/assets/images202509202114840.jpg" alt="my photo" id="my-photo">
                 <a href="/contact" class="btn btn-primary">
                     <p id="contact">Contact Me</p>
                 </a>
