--- a/public/style.css
+++ b/public/style.css
@@ -243,7 +243,7 @@ h2.dark {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: "Comic Sans MS", cursive;
+  font-family: "Comic Sans MS", "Playpen Sans Hebrew", cursive;
   font-size: 1.2rem;
   /* font-weight: bold; */
   color: #555555;
