Made contact details clickable

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -30,7 +30,7 @@ import Layout from '../layouts/Layout.astro';
     </style>
     <h1>Contact Me</h1>
     <div class="contact-info">
-        Tel: +86 180 7117 7024<br>
-        Email: darkwilldie99@gmail.com
+        Tel: <a href="tel:+8618071177024">+86 180 7117 7024</a><br>
+        Email: <a href="mailto:darkwilldie99@gmail.com">darkwilldie99@gmail.com</a>
     </div>
 </Layout>
